# Zomboid-FastPack-Doctor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_RU.md  pyproject.toml
.github/workflows/: release.yml
companion/: fastpack.py
companion/fastpack_doctor/: __init__.py  cli.py  discovery.py  models.py  parsers.py  report.py  scanner.py
docs/: ADR-001-hybrid-architecture.md  MODDER_API.md  USAGE.md
mod/ZomboidFastPackDoctor/: README.txt
mod/ZomboidFastPackDoctor/42.0/: mod.info
mod/ZomboidFastPackDoctor/42.0/media/lua/client/: FastPack_UI.lua
mod/ZomboidFastPackDoctor/42.0/media/lua/shared/: FastPack_Core.lua
mod/ZomboidFastPackDoctor/common/media/lua/shared/Translate/EN/: UI.json
mod/ZomboidFastPackDoctor/common/media/lua/shared/Translate/RU/: UI.json
release/: README_EN.txt  README_RU.txt  RUN_FASTPACK_DOCTOR.bat
scripts/: publish-github.ps1
tests/: test_fastpack.py
workshop/: DESCRIPTION_EN.md  DESCRIPTION_RU.md  README_EN.txt  README_RU.txt  workshop.txt
